--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^10.0.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "typewriter-effect": "^2.20.1"
