--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "typewriter-effect": "^2.20.1"
+  },
+  "devDependencies": {
+    "prettier": "3.0.0"
   }
 }
