--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@phosphor-icons/react": "^2.0.10",
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.45.0",
-    "eslint-config-next": "13.4.12",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@phosphor-icons/react": "^2.0.15",
+    "@types/node": "20.10.0",
+    "@types/react": "18.2.38",
+    "@types/react-dom": "18.2.17",
+    "autoprefixer": "10.4.16",
+    "eslint": "8.54.0",
+    "eslint-config-next": "^14.0.3",
+    "next": "^14.0.3",
+    "postcss": "8.4.31",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-player": "^2.13.0",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.1.6",
-    "typewriter-effect": "^2.20.1"
+    "tailwindcss": "3.3.5",
+    "typescript": "5.3.2",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
-    "prettier": "3.0.0"
+    "prettier": "3.1.0"
   }
 }
