--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@phosphor-icons/react": "^2.0.15",
-    "@types/node": "20.10.0",
-    "@types/react": "18.2.38",
-    "@types/react-dom": "18.2.17",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.54.0",
-    "eslint-config-next": "^14.0.3",
-    "next": "^14.0.3",
-    "postcss": "8.4.31",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-player": "^2.13.0",
-    "tailwindcss": "3.3.5",
-    "typescript": "5.3.2",
-    "typewriter-effect": "^2.21.0"
+    "@phosphor-icons/react": "^2.1.7",
+    "next": "^15.1.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-player": "^2.16.0",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
-    "prettier": "3.1.0"
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.3",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2",
+    "prettier": "^3.4.2"
   }
 }
