--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "portfolio",
   "version": "2.2.0",
   "private": true,
+  "engines": {
+    "node": ">=20.9.0 <21"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
